# JSON_hierachy

./: .gitignore  .gitmodules  Cargo.toml  README.md
examples/: multiple_keys.json  nested.json  simple.json  student.json
src/: analysis.rs  components.rs  main.rs  vhdl.rs  visualization.rs
src/analysis/: analyzer.rs  generator.rs  mod.rs  name_reg.rs  td.rs  til.rs  vhdl.rs  visualization.rs
src/analysis/analyzer/: analysis.rs  mod.rs  name_reg.rs  signal_manager.rs  top_component.rs  type_manager.rs
src/analysis/analyzer/file_manager/: mod.rs
src/analysis/analyzer/file_manager/matcher/: mod.rs
src/analysis/analyzer/file_manager/templates/: array_parser.vhd  bool_parser.vhd  int_parser.vhd  key_parser.vhd  record_parser.vhd  string_parser.vhd  toml_template.toml
src/analysis/components/: analysis.rs  array.rs  display.rs  key.rs  matcher.rs  mod.rs  object.rs  record.rs  til.rs  value.rs  vhdl.rs
src/analysis/gen_tools/: entity_manager.rs  mod.rs  name_reg.rs  type_manager.rs  type_reg.rs
src/analysis/gen_tools/matcher/: manager.rs  mod.rs
src/analysis/types/: mod.rs  signals.rs  stream_types.rs  streaming_interface.rs  til_component.rs  til_streamlet.rs  til_streamlets.rs
