[package]
name = "json_hierachy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot = "0.1.4"
enum-map = "2.4.2"
indoc = "1.0.7"
json = "0.12.4"
pyo3 = { version = "0.17.3", features = ["auto-initialize"] }
